water-app/src/map_source/gif_image_frame_style.css
#gif-image-frame-container {
    text-align: center;
    width: 60vw;
    display: block;
    margin: 3vh auto 5vh;
    vertical-align: top;
}

#gif-image-frame {
    margin: 0;
    padding: 0;
    width: 60vw;
    height: 50vh;
    vertical-align: top;
}

#gif-image-play-button {
    width: 2vw;
    height: 2vw;
}

#gif-image-frame-slider {
    width: 50vw;
    color: #38b6ff;
}

